--- a/.env-backend-acme
+++ b/.env-backend-acme
@@ -1,6 +1,6 @@
-BACKEND_HOST=api.ticketz.exemplo.com.br
-FRONTEND_HOST=ticketz.exemplo.com.br
-EMAIL_ADDRESS=ticketz@exemplo.com.br
+BACKEND_HOST=dos.generacionet.com
+FRONTEND_HOST=uno.generacionet.com
+EMAIL_ADDRESS=info@generacionet.com
 
 RECAPTCHA_SECRET_KEY=
 
