--- a/.env-frontend-acme
+++ b/.env-frontend-acme
@@ -1,7 +1,7 @@
-FRONTEND_HOST=ticketz.exemplo.com.br
-EMAIL_ADDRESS=ticketz@exemplo.com.br
+FRONTEND_HOST=uno.generacionet.com
+EMAIL_ADDRESS=info@generacionet.com
 
-BACKEND_HOST=api.ticketz.exemplo.com.br
+BACKEND_HOST=dos.generacionet.com
 
 RECAPTCHA_SITE_KEY=
 
