--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
 	"short_name": "Contacto.chat",
-	"name": "Contacto.chat - Chat Based Ticket System",
+	"name": "Contacto.chat - Sistema de Multichat CRM",
 	"icons": [
 		{
 			"src": "favicon.ico",
