--- a/.env-backend-acme
+++ b/.env-backend-acme
@@ -1,5 +1,5 @@
-BACKEND_HOST=cuatro.contacto.chat
-FRONTEND_HOST=tres.contacto.chat
+BACKEND_HOST=dos.contacto.chat
+FRONTEND_HOST=uno.contacto.chat
 EMAIL_ADDRESS=info@generacionet.com
 
 RECAPTCHA_SECRET_KEY=
