--- a/.env-frontend-acme
+++ b/.env-frontend-acme
@@ -1,7 +1,7 @@
-FRONTEND_HOST=tres.contacto.chat
+FRONTEND_HOST=uno.contacto.chat
 EMAIL_ADDRESS=info@generacionet.com
 
-BACKEND_HOST=cuatro.contacto.chat
+BACKEND_HOST=dos.contacto.chat
 
 RECAPTCHA_SITE_KEY=
 
