--- a/.env-backend-acme
+++ b/.env-backend-acme
@@ -1,5 +1,5 @@
-BACKEND_HOST=cuatro.contacto.chat
-FRONTEND_HOST=tres.contacto.chat
+BACKEND_HOST=seis.contacto.chat
+FRONTEND_HOST=cinco.contacto.chat
 EMAIL_ADDRESS=info@generacionet.com
 
 RECAPTCHA_SECRET_KEY=
